--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ matplotlib>=1.4.3
 pandas>=0.19
 tensorflow==2.0.1
 Keras==2.3.1
+opencv_python==4.1.2.30
+numpy_ringbuffer==0.2.1
+fuzzywuzzy==0.18.0
